updated artwork to fix 32x32 tile set

--- a/AI_Project/AgentTutorial/AgentTutorial.vcxproj.filters
+++ b/AI_Project/AgentTutorial/AgentTutorial.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="WanderingBehaviour.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AgentTutorialApp.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WanderingBehaviour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
