--- a/AI_Project/AgentTutorial/AgentTutorial.vcxproj
+++ b/AI_Project/AgentTutorial/AgentTutorial.vcxproj
@@ -23,6 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AgentTutorial</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>TheifGame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -171,6 +172,7 @@
     <ClCompile Include="SeekBehaviour.cpp" />
     <ClCompile Include="SteeringBehaviour.cpp" />
     <ClCompile Include="SteeringForce.cpp" />
+    <ClCompile Include="Tile.cpp" />
     <ClCompile Include="WanderBehaviour.cpp" />
     <ClCompile Include="WanderingBehaviour.cpp" />
   </ItemGroup>
@@ -183,6 +185,7 @@
     <ClInclude Include="SeekBehaviour.h" />
     <ClInclude Include="SteeringBehaviour.h" />
     <ClInclude Include="SteeringForce.h" />
+    <ClInclude Include="Tile.h" />
     <ClInclude Include="WanderBehaviour.h" />
     <ClInclude Include="WanderingBehaviour.h" />
   </ItemGroup>
