--- a/AI_Project/AgentTutorial/AgentTutorial.vcxproj
+++ b/AI_Project/AgentTutorial/AgentTutorial.vcxproj
@@ -168,6 +168,10 @@
     <ClCompile Include="Behaviour.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="FleeBehaviour.cpp" />
+    <ClCompile Include="FSM.cpp" />
+    <ClCompile Include="FSMCondition.cpp" />
+    <ClCompile Include="FSMState.cpp" />
+    <ClCompile Include="FSMTransition.cpp" />
     <ClCompile Include="ImageManager.cpp" />
     <ClCompile Include="KeyboardBehaviour.cpp" />
     <ClCompile Include="Level.cpp" />
@@ -183,11 +187,16 @@
     <ClInclude Include="Behaviour.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="FleeBehaviour.h" />
+    <ClInclude Include="FSM.h" />
+    <ClInclude Include="FSMCondition.h" />
+    <ClInclude Include="FSMState.h" />
+    <ClInclude Include="FSMTransition.h" />
     <ClInclude Include="ImageManager.h" />
     <ClInclude Include="KeyboardBehaviour.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="SeekBehaviour.h" />
+    <ClInclude Include="State.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="WanderBehaviour.h" />
   </ItemGroup>
