--- a/AI_Project/AgentTutorial/AgentTutorial.vcxproj.filters
+++ b/AI_Project/AgentTutorial/AgentTutorial.vcxproj.filters
@@ -158,5 +158,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
