Fixed ai pathfinding, now uses A* instead of dijkstra, Agent now keeps track of current node between seek and patrol decisions, created cabinet tiles and added them to room one

--- a/JewelThief2/Game/Game.vcxproj
+++ b/JewelThief2/Game/Game.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="DNode.h" />
     <ClInclude Include="IBehaviour.h" />
+    <ClInclude Include="Pathfinding.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="KeybaordBehaviour.h" />
