--- a/JewelThief2/Game/Game.vcxproj.filters
+++ b/JewelThief2/Game/Game.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="SearchBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pathfinding.h">
+      <Filter>Header Files\Pathfinding</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
