player collisions no longer result in slingshot affect, nor does the player stick to walls.

--- a/JewelThief2/Game/Game.vcxproj
+++ b/JewelThief2/Game/Game.vcxproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <ClInclude Include="Agent.h" />
     <ClInclude Include="AStar.h" />
+    <ClInclude Include="Collider.h" />
     <ClInclude Include="Condition.h" />
     <ClInclude Include="Decision.h" />
     <ClInclude Include="Edge.h" />
