added collectable gem, and completed all room layouts.

--- a/JewelThief2/Game/Game.vcxproj.filters
+++ b/JewelThief2/Game/Game.vcxproj.filters
@@ -159,7 +159,7 @@
       <Filter>Header Files\Pathfinding</Filter>
     </ClInclude>
     <ClInclude Include="Collider.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Component</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
